--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ali-a-ahmed1097/restaurant-page#readme",
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "csv-loader": "^3.0.5",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
